# performance-management-system

./: CMakeLists.txt
data/: class.txt  score.txt  student.txt
src/: main.c
src/pojo/: file.c  file.h  score.h  student.h
src/service/: search.c  search.h
src/service/show/: add_menu.c  delete.c  insertClass.c  main.h  menu.c  revise_stu.c  statistics.c  stu_score_menu.c
src/sql/: environmental.c  initialization.c  initialization.h  reader.c  reader.h  writer.c  writer.h
src/util/collection/: iterator.c  iterator.h  sort.c  sort.h
src/util/scanf/: scanf.c  scanf.h
